<resources>
    <string name="app_name">SSUNB</string>

    <string name="book_page">Book Page</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="book_page_desc">No description</string>
    <string name="title_activity_login_cadastro">LoginCadastroActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_livro"></string>
    <string name="PrimNome">Primeiro Nome</string>
    <string name="SobreNome">Sobrenome</string>
    <string name="email">Email</string>
    <string name="cidade">Cidade</string>
    <string name="Senha">Senha</string>
    <string name="RepSenha">Repetir Senha</string>
    <string name="botaoCadastro">Cadastrar</string>
    <string name="title_activity_home_usuario">HomeUsuarioActivity</string>
    <string name="search_title">Procurar Obras Literárias</string>
    <string name="NomeLivro">Nome do livro</string>
    <string name="AutorLivro">Nome do autor</string>
    <string name="facebook_app_id">172774966403083</string>

    <string-array name="itensMenuUser">
        <item>Procurar Livros</item>
        <item>Meus Livros</item>
        <item>Meus Empréstimos</item>
        <item>Minhas Informações Pessoais</item>
        <item>Enviar sugestão de novo livro</item>
    </string-array>

    <string-array name="itensMenuColaborador">
        <item>Sugestões Pendentes</item>
    </string-array>

    <string name="title_activity_sugestao_cadastro_livro">SugestaoCadastroLivro</string>
    <string name="title_activity_livros_usuario">LivrosUsuarioActivity</string>
    <string name="title_activity_search">Search</string>

    <string name="search_hint">Obras Literárias</string>
    <string name="search_label">Procurar Obras Literárias</string>
    <string name="title_activity_home_colaborador">HomeColaborador</string>
    <string name="title_activity_pagina_emprestimo">PaginaEmprestimo</string>
    <string name="title_activity_pagina_listagem">PaginaListagem</string>
    <string name="title_activity_pagina_listagem_usuarios">PaginaListagemUsuarios</string>
    <string name="title_activity_lista_livros_pendentes">ListaLivrosPendentes</string>
    <string name="title_activity_comfirmacao_cadastro_livro">ComfirmacaoCadastroLivro</string>
    <string name="title_activity_confirmacao_cadastro_livro">ConfirmacaoCadastroLivro</string>
    <string name="title_activity_pagina_listagem_emprestimos">PaginaListagemEmprestimos</string>
    <string name="title_activity_pagina_conformacao">PaginaConformacao</string>
    <string name="title_activity_pagina_confirmacao">PaginaConfirmacao</string>


</resources>