<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_cadastro" tools:context="mds.ufscar.br.ssunb.CadastroActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewPrimNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimNome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextPrimNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewSobreNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SobreNome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSobreNome" />

        <TextView
        android:id="@+id/textViewCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/button2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:id="@+id/editTextCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_above="@+id/editText4"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/textViewSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Senha"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextSenha" />

        <Button
        android:id="@+id/buttonCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="EfetuarCadastro"
        android:text="@string/botaoCadastro"

        android:layout_marginBottom="108dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

</RelativeLayout>
